--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "aws-amplify": "^1.1.29",
     "express": "^4.16.4",
     "next": "^8.0.3",
     "next-redux-wrapper": "^3.0.0-alpha.2",
