--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "aws-amplify": "^1.1.29",
+    "axios": "^0.19.0",
     "cookies-js": "^1.2.3",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "next": "^8.0.3",
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "next-routes": "^1.4.2",
