--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
     "class-methods-use-this": 0,
     "react/no-did-update-set-state": 0,
     "max-len": 0,
-    "react/jsx-one-expression-per-line": 0
+    "react/jsx-one-expression-per-line": 0,
+    "react-in-jsx-scope": 0
   }
 }
