--- a/package.json
+++ b/package.json
@@ -22,15 +22,23 @@
     "aws-amplify": "^1.1.29",
     "axios": "^0.19.0",
     "cookies-js": "^1.2.3",
+    "currency-formatter": "^1.4.3",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
-    "next": "^8.0.3",
+    "material-ui": "^0.20.2",
+    "next": "^8.1.0",
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "next-routes": "^1.4.2",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.6.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-google-maps": "^9.4.5",
+    "react-loaders": "^3.0.1",
+    "react-rating": "^1.3.0",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-s-alert": "^1.4.1",
     "redux": "^4.0.1"
   },
   "devDependencies": {
