--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-google-maps": "^9.4.5",
+    "react-image-gallery": "^0.8.18",
     "react-loaders": "^3.0.1",
     "react-rating": "^1.3.0",
     "react-redux": "^6.0.1",
