--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-ga": "^2.5.3",
     "react-google-maps": "^9.4.5",
     "react-image-gallery": "^0.8.18",
     "react-loaders": "^3.0.1",
@@ -41,6 +42,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-s-alert": "^1.4.1",
+    "react-with-analytics": "0.0.5",
     "redux": "^4.0.1"
   },
   "devDependencies": {
