--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-routes": "^1.4.2",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
+    "rc-slider": "^8.6.13",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-ga": "^2.5.3",
