--- a/package.json
+++ b/package.json
@@ -34,13 +34,17 @@
     "rc-slider": "^8.6.13",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-dropzone": "^10.1.5",
     "react-ga": "^2.5.3",
     "react-google-maps": "^9.4.5",
     "react-image-gallery": "^0.8.18",
     "react-loaders": "^3.0.1",
+    "react-odometerjs": "^2.1.1",
     "react-rating": "^1.3.0",
     "react-redux": "^6.0.1",
     "react-s-alert": "^1.4.1",
+    "react-slick": "^0.24.0",
+    "react-swipeable-views": "^0.13.3",
     "react-with-analytics": "0.0.5",
     "redux": "^4.0.1"
   },
