--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-swipeable-views": "^0.13.3",
     "react-with-analytics": "0.0.5",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
