--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/iamtech/enantio#readme",
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/styles": "^4.2.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
@@ -25,7 +27,6 @@
     "express": "^4.16.4",
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.11",
-    "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "next": "^8.1.0",
     "next-redux-wrapper": "^3.0.0-alpha.2",
