--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "restart": "rm -rf ./node_modules && rm -rf ./.next && npm install && npm run dev"
   },
   "repository": {
     "type": "git",
