--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-google-maps": "^9.4.5",
     "react-image-gallery": "^0.8.18",
     "react-loaders": "^3.0.1",
+    "react-messenger-customer-chat": "^0.7.2",
     "react-odometerjs": "^2.1.1",
     "react-rating": "^1.3.0",
     "react-redux": "^6.0.1",
